--- a/index.html
+++ b/index.html
@@ -63,8 +63,9 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="download.html">Download</a>
+                <a class="p-2 text-dark" href="features.html">Quickstart</a>
                 <a class="p-2 text-dark" href="documentation.html">Docs</a>
+                <a class="p-2 text-dark" href="download.html">Download</a>
                 <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
             </nav>
         </div>
@@ -109,7 +110,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=basic-folder-layout">Simple
+                                <a href="features.html#/?id=simple-configuration-layout">Simple
                                     Configuration Layout</a>
                             </h4>
                         </div>
@@ -123,7 +124,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=better-config-structure-using-include">Reuse Common
+                                <a href="features.html#/?id=reuse-common-parts">Reuse Common
                                     Parts</a>
                             </h4>
                         </div>
@@ -137,7 +138,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=placeholders">Reference Values</a>
+                                <a href="features.html#/?id=reference-values">Reference Values</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -149,7 +150,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=expression-language">Dynamic Values</a>
+                                <a href="features.html#/?id=dynamic-values">Dynamic Values</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -163,7 +164,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=environment-specific-properties">Environment Specific
+                                <a href="features.html#/?id=environment-specific-config">Environment Specific
                                     Config</a>
                             </h4>
                         </div>
@@ -177,7 +178,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=template-files">Static Files Templating</a>
+                                <a href="features.html#/?id=static-files-templating">Static Files Templating</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -189,8 +190,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="documentation.html#/?id=viewing-differences-between-config-versions">Config
-                                    Diff</a>
+                                <a href="features.html#/?id=config-diff">Config Diff</a>
                             </h4>
                         </div>
                         <div class="card-body">
@@ -202,8 +202,7 @@
                     <div class="card mb-4">
                         <div class="card-header">
                             <h4 class="my-0 mc-color">
-                                <a href="plugin.html">IDE
-                                    Plugin</a>
+                                <a href="plugin.html">IDE Plugin</a>
                             </h4>
                         </div>
                         <div class="card-body">
