--- a/plugin.html
+++ b/plugin.html
@@ -37,7 +37,7 @@
     <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration"
           name="keywords">
     <meta content="Microconfig - Microservice configuration made easy" name="description">
-    <title>Microconfig.io - the best tool for microservice configuration management</title>
+    <title>Microconfig.io - IDEA plugin</title>
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -54,9 +54,9 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-                <!--                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>-->
-                <a class="p-2 text-dark" href="download.html">Download</a>
+                <a class="p-2 text-dark" href="features.html">Quickstart</a>
                 <a class="p-2 text-dark" href="documentation.html">Docs</a>
+                <a class="p-2 text-dark" href="download.html">Download</a>
                 <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
             </nav>
         </div>
