--- a/plugin.html
+++ b/plugin.html
@@ -54,7 +54,8 @@
             </a>
 
             <nav class="my-2 my-md-0 mr-md-3">
-                <a class="p-2 text-dark" href="features.html">Quickstart</a>
+                <a class="p-2 text-dark" href="features.html">Features</a>
+                <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>
                 <a class="p-2 text-dark" href="documentation.html">Docs</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
                 <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
