--- a/download.html
+++ b/download.html
@@ -58,7 +58,7 @@
                 <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>
                 <a class="p-2 text-dark" href="documentation.html">Docs</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
+                <a class="p-2 text-dark" href="plugin.html">IDE plugin</a>
             </nav>
         </div>
     </div>
