--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>
                 <a class="p-2 text-dark" href="documentation.html">Docs</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
+                <a class="p-2 text-dark" href="plugin.html">IDE plugin</a>
             </nav>
         </div>
     </div>
@@ -207,7 +207,7 @@
                             </h4>
                         </div>
                         <div class="card-body">
-                            You can use IntelliJ Microconfig plugin to navigate, preview and generate config without
+                            You can use JetBrains IDE Microconfig plugin to navigate, preview and generate config without
                             leaving your IDE.
                         </div>
                     </div>
