--- a/plugin.html
+++ b/plugin.html
@@ -37,7 +37,7 @@
     <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration"
           name="keywords">
     <meta content="Microconfig - Microservice configuration made easy" name="description">
-    <title>Microconfig.io - IDEA plugin</title>
+    <title>Microconfig.io - IDE plugin</title>
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -58,7 +58,7 @@
                 <a class="p-2 text-dark" href="quickstart.html">Quickstart</a>
                 <a class="p-2 text-dark" href="documentation.html">Docs</a>
                 <a class="p-2 text-dark" href="download.html">Download</a>
-                <a class="p-2 text-dark" href="plugin.html">IDEA plugin</a>
+                <a class="p-2 text-dark" href="plugin.html">IDE plugin</a>
             </nav>
         </div>
     </div>
@@ -80,12 +80,12 @@
     <section class="jumbotron">
         <div class="container">
             <article class="markdown-body entry-content" itemprop="text">
-                <h1>IntelliJ IDEA plugin
+                <h1>JetBrains IDE plugin
                     <a href="https://plugins.jetbrains.com/plugin/12064-microconfig-io">
-                        <img alt="JetBrains IntelliJ plugins" src="https://img.shields.io/jetbrains/plugin/d/12064-microconfig-io?color=%235fbb92&style=flat-square">
+                        <img alt="JetBrains IDE plugins" src="https://img.shields.io/jetbrains/plugin/d/12064-microconfig-io?color=%235fbb92&style=flat-square">
                     </a>
                 </h1>
-                <p>IntelliJ IDEA plugin for Microconfig that allows navigation to #include and ${placeholder} sources,
+                <p>JetBrains IDE plugin plugin for Microconfig that allows navigation to #include and ${placeholder} sources,
                     preview individual placeholders or whole components and even build your configs.</p>
 
                 <h4>Plugin usage</h4>
