email change to hello@

--- a/download.html
+++ b/download.html
@@ -110,7 +110,7 @@
             <ul class="list-unstyled mb-0">
                 <li class="lead">Join our <a href="https://join.slack.com/t/microconfig/shared_invite/zt-dflf2m0n-wOPVfAmk5eiHPn_9Omff7Q">Slack!</a></li>
                 <li class="lead">Contribute on <a href="https://github.com/microconfig/microconfig">Github</a></li>
-                <li class="lead"><a href="mailto:support@microconfig.io">support@microconfig.io</a></li>
+                <li class="lead"><a href="mailto:hello@microconfig.io">hello@microconfig.io</a></li>
             </ul>
         </div>
     </div>
