--- a/features.html
+++ b/features.html
@@ -35,7 +35,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta charset="UTF-8">
 
-    <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration"
+    <meta content="configuration includes, placeholders, configuration expression language, application external configuration, configuration diff"
           name="keywords">
     <meta content="Microconfig - Microservice configuration made easy" name="description">
     <title>Microconfig.io - Microconfig features</title>
