--- a/download.html
+++ b/download.html
@@ -36,7 +36,7 @@
 
     <meta content="configuration management, configuration framework, external configuration, configuration best practices, java configuration, microservice configuration, microservice configs, config, configuration"
           name="keywords">
-    <meta content="Microconfig - Microservice configuration made easy" name="description">
+    <meta content="Microconfig - Download" name="description">
     <title>Microconfig.io - Download</title>
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet"
