--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <meta content="configuration management, external configuration, microservice configuration, configuration processor, configuration management tools, application configuration"
+    <meta content="microservice configuration, configuration, cloud native, cloud native configuration, kubernetes, helm, configuration management, external configuration, configuration processor, configuration management tools, application configuration"
           name="keywords">
-    <meta content="Microconfig - Microservice configuration made easy" name="description">
-    <title>Microconfig.io - the best tool for microservice configuration management</title>
+    <meta content="Microconfig is a modern and simple way to manage microservice configuration. Especially in the Cloud." name="description">
+    <title>Microconfig.io - Microservice Configuration Made Easy</title>
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
