--- a/features.html
+++ b/features.html
@@ -59,6 +59,10 @@
             color: black;
         }
 
+        h2 .anchor span {
+            color: #5fbb92;
+        }
+
         .markdown-section {
             padding: 0;
             max-width: 90%;
