--- a/download.html
+++ b/download.html
@@ -87,14 +87,14 @@
                 <a href="https://github.com/microconfig/microconfig/releases">Github releases</a>.
             </p>
             <p class="lead">
-                If you want to add Microconfig-core as dependency to your Java project use
+                If you want to add Microconfig-core as a dependency to your Java project use
                 <a href="https://search.maven.org/artifact/io.microconfig/microconfig-core/4.0.0/jar">this Maven
                     artifact</a>.
             </p>
 
             <p class="lead">
                 See documentation how to
-                <a href="documentation.html#/?id=running-the-config-build">run config build
+                <a href="quickstart.html">run config build
                     via CLI</a>.
             </p>
         </div>
